--- a/app/templates/partials/lines.html
+++ b/app/templates/partials/lines.html
@@ -6,3 +6,13 @@
 	<span><span></span></span>
 	<span><span></span></span>
 </div>
+<div class="load-page">
+	<div>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
+</div>
