--- a/app/templates/partials/montage/step-2.html
+++ b/app/templates/partials/montage/step-2.html
@@ -10,11 +10,13 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="wow item item-1" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="wow item item-2" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="wow item item-3" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="wow item item-4" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="wow item item-5" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-1" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-2" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div
+				data-0="transform:translateY(900px);" data-top="transform:translateY(-1600px);"
+				class="wow_ item item-3" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-4" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-5" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div>
