--- a/app/templates/partials/montage/step-3.html
+++ b/app/templates/partials/montage/step-3.html
@@ -8,17 +8,25 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="wow item item-1" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="wow item item-2" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="wow item item-3">
+			<div 
+			data-0="transform:translateY(800px);" data-top="transform:translateY(-200px);" 
+			class="wow_ item item-1" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(2000px);" data-top="transform:translateY(-1000px);" 
+			class="wow_ item item-2" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-3">
 				<div class="video">
 					<video id="video-about-1" preload="none" loop autoplay>
 						<source src="video/video2.mp4" type="video/mp4">
 					</video>
 				</div>
 			</div>
-			<div class="wow item item-4" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
-			<div class="wow item item-5" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(700px);" data-top="transform:translateY(-500px);" 
+			class="wow_ item item-4" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(1800px);" data-top="transform:translateY(-1500px);" 
+			class="wow_ item item-5" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div>
