--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1477,6 +1477,77 @@ th.hide-for-touch {
 .item-wrapper {
   pointer-events: none; }
 
+.load-page {
+  pointer-events: none;
+  z-index: 101;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0 1vw; }
+  .load-page > div {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    font-size: 0; }
+    .load-page > div span {
+      height: 100%;
+      width: -webkit-calc(16.666666666666668%);
+      width: calc(16.666666666666668%);
+      background: white;
+      position: absolute;
+      top: 0;
+      -webkit-transition-property: width;
+      transition-property: width;
+      -webkit-transition-timing-function: cubic-bezier(0.52, 0.09, 0.12, 1);
+      transition-timing-function: cubic-bezier(0.52, 0.09, 0.12, 1);
+      -webkit-transition-duration: 1s;
+      transition-duration: 1s;
+      font-size: 16px; }
+      .load-page > div span:nth-child(1) {
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s;
+        -webkit-transition: width 0.6s 0.9s cubic-bezier(0.61, 0, 0.6, 1);
+        transition: width 0.6s 0.9s cubic-bezier(0.61, 0, 0.6, 1);
+        left: 0; }
+      .load-page > div span:nth-child(2) {
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s;
+        -webkit-transition: width 0.6s 0.8s cubic-bezier(0.61, 0, 0.6, 1);
+        transition: width 0.6s 0.8s cubic-bezier(0.61, 0, 0.6, 1);
+        left: 16.66667%; }
+      .load-page > div span:nth-child(3) {
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s;
+        -webkit-transition: width 0.6s 0.7s cubic-bezier(0.61, 0, 0.6, 1);
+        transition: width 0.6s 0.7s cubic-bezier(0.61, 0, 0.6, 1);
+        left: -webkit-calc(16.666666666666668% * 2);
+        left: calc(16.666666666666668% * 2); }
+      .load-page > div span:nth-child(4) {
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s;
+        -webkit-transition: width 0.6s 0.6s cubic-bezier(0.61, 0, 0.6, 1);
+        transition: width 0.6s 0.6s cubic-bezier(0.61, 0, 0.6, 1);
+        left: -webkit-calc(16.666666666666668% * 3);
+        left: calc(16.666666666666668% * 3); }
+      .load-page > div span:nth-child(5) {
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s;
+        -webkit-transition: width 0.6s 0.5s cubic-bezier(0.61, 0, 0.6, 1);
+        transition: width 0.6s 0.5s cubic-bezier(0.61, 0, 0.6, 1);
+        left: -webkit-calc(16.666666666666668% * 4);
+        left: calc(16.666666666666668% * 4); }
+      .load-page > div span:nth-child(6) {
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s;
+        -webkit-transition: width 0.6s 0.4s cubic-bezier(0.61, 0, 0.6, 1);
+        transition: width 0.6s 0.4s cubic-bezier(0.61, 0, 0.6, 1);
+        left: -webkit-calc(16.666666666666668% * 5);
+        left: calc(16.666666666666668% * 5); }
+      .loaded .load-page > div span {
+        width: 0; }
+
 .title-step {
   margin-left: 11%;
   width: 33.33334%;
@@ -1599,12 +1670,7 @@ body {
   font-size: 16px;
   line-height: 180%; }
 
-body > * {
-  -webkit-transition: opacity 0.5s;
-  transition: opacity 0.5s; }
 
-body:not(.loaded) > * {
-  opacity: 0; }
 
 a {
   outline: none !important; }
@@ -2475,6 +2541,70 @@ footer {
       transition: width 1.5s 0.8s ease;
       right: 0;
       width: 0; }
+      .home-page .step-2 .container .wrapper-details .content {
+        width: -webkit-calc(64vw + 22px);
+        width: calc(64vw + 22px);
+        padding: 1vw 0; }
+        .home-page .step-2 .container .wrapper-details .content > div {
+          height: 23vh;
+          padding: 1px 1vw 1vw 3vw; }
+          .home-page .step-2 .container .wrapper-details .content > div h3 {
+            position: relative;
+            margin: 1.5vw 0;
+            font-size: 20px;
+            text-transform: uppercase; }
+            .home-page .step-2 .container .wrapper-details .content > div h3:after {
+              content: '';
+              position: absolute;
+              top: 50%;
+              width: 10000px;
+              height: 1px;
+              background: #d7d7d7;
+              margin: 0 0 0 16px; }
+          .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper {
+            font-size: 0; }
+            .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span {
+              display: inline-block;
+              vertical-align: top;
+              padding: 3vw 1vw 0;
+              max-width: 12vw;
+              min-height: 3vw;
+              min-width: 6vw;
+              outline: 1px solid red;
+              background-size: auto 2.6vw !important;
+              font-size: 16px;
+              text-align: center;
+              line-height: 130%; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.vohnestiykist {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.lehkist {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.morozostiykist {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.zvukoizolyatsiya {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.torhovelni {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.promyslovi {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.nezhytlovi {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.nyzka-temperatura {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.protypozhezhna-bezpeka {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.iso {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.iso-2 {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.cc {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.test {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.all-documents {
+                background: url(../img/ico.png) no-repeat center top; }
+              .home-page .step-2 .container .wrapper-details .content > div .texh-wrapper span.download {
+                background: url(../img/ico.png) no-repeat center top; }
     .home-page .step-2 .container.open-details {
       overflow: visible; }
       .home-page .step-2 .container.open-details .wrapper-short {
@@ -2656,6 +2786,9 @@ footer {
     left: 0;
     width: 100%;
     height: 100%; }
+    .home-page .step-5 .slider-wrapper.new-translate .items .item .description, .home-page .step-5 .slider-wrapper.new-translate .items .item .img.img-1, .home-page .step-5 .slider-wrapper.new-translate .items .item .img.img-2 {
+      -webkit-transition-delay: 0s !important;
+      transition-delay: 0s !important; }
     .home-page .step-5 .slider-wrapper .items {
       pointer-events: none;
       position: absolute;
@@ -3630,9 +3763,8 @@ footer {
       -webkit-filter: grayscale(100%);
       opacity: 0.1;
       -webkit-transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-1 .item-wrapper .item.item-1.animated {
-        height: 30%; }
+      transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 30%; }
     .montage .step-1 .item-wrapper .item.item-2 {
       bottom: 0;
       left: -webkit-calc(16.666666666666668% * 2 + 3px);
@@ -3641,9 +3773,8 @@ footer {
       width: -webkit-calc(16.666666666666668% * 1 - 8px);
       width: calc(16.666666666666668% * 1 - 8px);
       -webkit-transition: height 1s 0.2s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0.2s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-1 .item-wrapper .item.item-2.animated {
-        height: 30%; }
+      transition: height 1s 0.2s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 30%; }
     .montage .step-1 .item-wrapper .item.item-3 {
       bottom: 0;
       left: -webkit-calc(16.666666666666668% * 3 + 3px);
@@ -3654,9 +3785,8 @@ footer {
       -webkit-filter: grayscale(100%);
       opacity: 0.1;
       -webkit-transition: height 1s 0.1s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0.1s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-1 .item-wrapper .item.item-3.animated {
-        height: 70%; }
+      transition: height 1s 0.1s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 70%; }
     .montage .step-1 .item-wrapper .item.item-4 {
       top: 0;
       left: -webkit-calc(16.666666666666668% * 4 + 4px);
@@ -3665,9 +3795,8 @@ footer {
       width: -webkit-calc(16.666666666666668% * 2 - 4px);
       width: calc(16.666666666666668% * 2 - 4px);
       -webkit-transition: height 1s 0.3s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0.3s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-1 .item-wrapper .item.item-4.animated {
-        height: 70%; }
+      transition: height 1s 0.3s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 70%; }
     .montage .step-1 .item-wrapper .item.item-5 {
       display: none;
       top: 0;
@@ -3677,9 +3806,8 @@ footer {
       width: -webkit-calc(16.666666666666668% - 8px);
       width: calc(16.666666666666668% - 8px);
       -webkit-transition: height 1s 0.4s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0.4s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-1 .item-wrapper .item.item-5.animated {
-        height: 40%; }
+      transition: height 1s 0.4s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 40%; }
 .montage .step-2 .title-step {
   margin-left: 15%;
   padding: 11vw 1vw 0; }
@@ -3742,9 +3870,8 @@ footer {
       width: -webkit-calc(16.666666666666668% * 2 - 8px);
       width: calc(16.666666666666668% * 2 - 8px);
       -webkit-transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-2 .item-wrapper .item.item-3.animated {
-        height: 65%; }
+      transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 65%; }
     .montage .step-2 .item-wrapper .item.item-4 {
       display: none;
       top: 0;
@@ -3805,9 +3932,8 @@ footer {
       -webkit-filter: grayscale(100%);
       opacity: 0.1;
       -webkit-transition: height 1s 0.2s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0.2s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-3 .item-wrapper .item.item-1.animated {
-        height: 30%; }
+      transition: height 1s 0.2s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 30%; }
     .montage .step-3 .item-wrapper .item.item-2 {
       bottom: 0;
       left: -webkit-calc(16.666666666666668% * 3 + 3px);
@@ -3816,9 +3942,8 @@ footer {
       width: -webkit-calc(16.666666666666668% * 1 - 8px);
       width: calc(16.666666666666668% * 1 - 8px);
       -webkit-transition: height 1s 0.3s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0.3s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-3 .item-wrapper .item.item-2.animated {
-        height: 30%; }
+      transition: height 1s 0.3s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 30%; }
     .montage .step-3 .item-wrapper .item.item-3 {
       display: none;
       bottom: 50%;
@@ -3828,9 +3953,8 @@ footer {
       width: -webkit-calc(16.666666666666668% * 1 - 8px);
       width: calc(16.666666666666668% * 1 - 8px);
       -webkit-transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-3 .item-wrapper .item.item-3.animated {
-        height: 40%; }
+      transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 40%; }
     .montage .step-3 .item-wrapper .item.item-4 {
       bottom: 0;
       left: -webkit-calc(16.666666666666668% * 4 + 4px);
@@ -3841,9 +3965,8 @@ footer {
       -webkit-filter: grayscale(100%);
       opacity: 0.1;
       -webkit-transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-3 .item-wrapper .item.item-4.animated {
-        height: 60%; }
+      transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 80%; }
     .montage .step-3 .item-wrapper .item.item-5 {
       bottom: 50%;
       left: -webkit-calc(16.666666666666668% * 5 + 4px);
@@ -3852,9 +3975,8 @@ footer {
       width: -webkit-calc(16.666666666666668% - 4px);
       width: calc(16.666666666666668% - 4px);
       -webkit-transition: height 1s 0.1s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0.1s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-3 .item-wrapper .item.item-5.animated {
-        height: 50%; }
+      transition: height 1s 0.1s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 80%; }
 .montage .step-4 .item-wrapper {
   position: absolute;
   top: 0;
@@ -3874,9 +3996,8 @@ footer {
       width: -webkit-calc(16.666666666666668% * 1 - 8px);
       width: calc(16.666666666666668% * 1 - 8px);
       -webkit-transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-4 .item-wrapper .item.item-2.animated {
-        height: 30%; }
+      transition: height 1s 0s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 30%; }
     .montage .step-4 .item-wrapper .item.item-3 {
       bottom: 0;
       left: -webkit-calc(16.666666666666668% * 3 + 3px);
@@ -3887,9 +4008,8 @@ footer {
       -webkit-filter: grayscale(100%);
       opacity: 0.1;
       -webkit-transition: height 1s 0.1s cubic-bezier(0.52, 0.09, 0.12, 1);
-      transition: height 1s 0.1s cubic-bezier(0.52, 0.09, 0.12, 1); }
-      .montage .step-4 .item-wrapper .item.item-3.animated {
-        height: 60%; }
+      transition: height 1s 0.1s cubic-bezier(0.52, 0.09, 0.12, 1);
+      height: 60%; }
     .montage .step-4 .item-wrapper .item.item-4 {
       display: none; }
     .montage .step-4 .item-wrapper .item.item-5 {
