--- a/scss/content/montage/_step-4.scss
+++ b/scss/content/montage/_step-4.scss
@@ -24,9 +24,9 @@
 				height: 0%;
 				width: calc(16.666666666666668% * 1 - 8px);
 				transition: height $duration 0s cubic-bezier(0.52, 0.09, 0.12, 1);
-				&.animated {
+				//&.animated {
 					height: 30%;
-				}
+				//}
 			}
 			&.item-3 {
 				bottom: 0;
@@ -36,9 +36,9 @@
 				-webkit-filter: grayscale(100%);
 				opacity: 0.1;
 				transition: height $duration .1s cubic-bezier(0.52, 0.09, 0.12, 1);
-				&.animated {
+				//&.animated {
 					height: 60%;
-				}
+				//}
 			}
 			&.item-4 {
 				display: none;
