--- a/scss/general/_content.scss
+++ b/scss/general/_content.scss
@@ -41,3 +41,67 @@
 .item-wrapper {
 	pointer-events: none;
 }
+
+// load page
+.load-page {
+	pointer-events: none;
+	z-index: 101;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding: 0 1vw;
+	> div {
+		width: 100%;
+		height: 100%;
+		position: relative;
+			font-size: 0;
+		span {
+			//outline: 1px solid red;
+			height: 100%;
+			width: calc(16.666666666666668%);
+			background: #fff;
+			position: absolute;
+			top: 0;
+			transition-property: width;
+			transition-timing-function: $timing-bezier;
+			transition-duration: $duration;
+				font-size: 16px;
+			&:nth-child(1) {
+				transition-delay: 0s;
+				transition: width .6s .9s cubic-bezier(.61,0,.6,1);
+				left: 0;
+			}
+			&:nth-child(2) {
+				transition-delay: 0s;
+				transition: width .6s .8s cubic-bezier(.61,0,.6,1);
+				left: 16.666666666666668%;
+			}
+			&:nth-child(3) {
+				transition-delay: 0s;
+				transition: width .6s .7s cubic-bezier(.61,0,.6,1);
+				left: calc(16.666666666666668% * 2);
+			}
+			&:nth-child(4) {
+				transition-delay: 0s;
+				transition: width .6s .6s cubic-bezier(.61,0,.6,1);
+				left: calc(16.666666666666668% * 3);
+			}
+			&:nth-child(5) {
+				transition-delay: 0s;
+				transition: width .6s .5s cubic-bezier(.61,0,.6,1);
+				left: calc(16.666666666666668% * 4);
+			}
+			&:nth-child(6) {
+				transition-delay: 0s;
+				transition: width .6s .4s cubic-bezier(.61,0,.6,1);
+				left: calc(16.666666666666668% * 5);
+			}
+
+			.loaded & {
+				width: 0;
+			}
+		}
+	}
+}
